# glacier-calendar

./: CMakeLists.txt  glacier-calendar.desktop
src/: CMakeLists.txt  calendarevent.cpp  calendarevent.h  main.cpp
src/qml/: glacier-calendar.qml  glacier-calendar.qrc
src/qml/components/: MonthViewDataPickerDelegate.qml  SelectDateTimeRow.qml
src/qml/pages/: AddEventPage.qml  CalendarViewPage.qml  SettingsPage.qml  agenaViewPage.qml  agendaViewPage.qml  dayViewPage.qml  monthViewPage.qml  weekViewPage.qml  yearViewPage.qml
translations/: glacier-calendar.ts  glacier-calendar_ar.ts  glacier-calendar_cs.ts  glacier-calendar_de.ts  glacier-calendar_pl.ts  glacier-calendar_ru.ts
